<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:drawablePadding="28dp"
        android:fontFamily="@font/ys_display"
        android:gravity="top"
        android:paddingTop="@dimen/paddingTop"
        android:paddingBottom="@dimen/paddingBottom"
        android:text="@string/settings2"
        android:textColor="@color/black_button"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="RtlSymmetry" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height2"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginBottom="@dimen/marginBottom2"
        android:text="@string/black_theme"
        android:textColor="@color/settings_color"
        android:textSize="@dimen/textSize2"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <TextView
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height2"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginBottom="@dimen/marginBottom2"
        android:fontFamily="@font/ys_display"
        android:gravity="center_vertical"
        android:text="@string/share_app"
        android:textColor="@color/settings_color"
        android:textSize="@dimen/textSize2"
        app:drawableRightCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/call_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height2"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginBottom="@dimen/marginBottom2"
        android:fontFamily="@font/ys_display"
        android:gravity="center_vertical"
        android:text="@string/call_center"
        android:textColor="@color/settings_color"
        android:textSize="@dimen/textSize2"
        app:drawableRightCompat="@drawable/ic_baseline_support_agent_24" />

    <TextView
        android:id="@+id/agreement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height2"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:fontFamily="@font/ys_display"
        android:gravity="center_vertical"
        android:text="@string/agreement"
        android:textColor="@color/settings_color"
        android:textSize="@dimen/textSize2"
        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

</LinearLayout>